set(OBJS_LIB_BEAMINTERACTION
    # cmake-format: sortable
    beam3contact_tangentsmoothing.cpp
    beam3contact_utils.cpp
    beam_contact_pair.cpp
    beam_contact_params.cpp
    beam_contact_runtime_vtk_output_params.cpp
    beam_crosslinker_handler.cpp
    beam_link.cpp
    beam_link_beam3r_line2_pinjointed.cpp
    beam_link_beam3r_line2_rigidjointed.cpp
    beam_link_pinjointed.cpp
    beam_link_rigidjointed.cpp
    beam_link_truss.cpp
    beam_potential_pair.cpp
    beam_potential_params.cpp
    beam_potential_runtime_vtk_output_params.cpp
    beam_to_beam_contact_condition.cpp
    beam_to_beam_contact_pair.cpp
    beam_to_beam_contact_params.cpp
    beam_to_beam_contact_variables.cpp
    beam_to_beam_point_coupling_pair.cpp
    beam_to_beam_point_coupling_pair_condition.cpp
    beam_to_beam_potential_pair.cpp
    beam_to_solid_conditions.cpp
    beam_to_solid_mortar_manager.cpp
    beam_to_solid_pair_base.cpp
    beam_to_solid_params_base.cpp
    beam_to_solid_surface_contact_pair.cpp
    beam_to_solid_surface_contact_pair_base.cpp
    beam_to_solid_surface_contact_params.cpp
    beam_to_solid_surface_meshtying_pair_base.cpp
    beam_to_solid_surface_meshtying_pair_gauss_point.cpp
    beam_to_solid_surface_meshtying_pair_gauss_point_base.cpp
    beam_to_solid_surface_meshtying_pair_gauss_point_FAD.cpp
    beam_to_solid_surface_meshtying_pair_mortar.cpp
    beam_to_solid_surface_meshtying_pair_mortar_base.cpp
    beam_to_solid_surface_meshtying_pair_mortar_FAD.cpp
    beam_to_solid_surface_meshtying_params.cpp
    beam_to_solid_surface_vtk_output_params.cpp
    beam_to_solid_surface_vtk_output_writer.cpp
    beam_to_solid_utils.cpp
    beam_to_solid_volume_meshtying_pair_2d-3d_base.cpp
    beam_to_solid_volume_meshtying_pair_2d-3d_full.cpp
    beam_to_solid_volume_meshtying_pair_2d-3d_plane.cpp
    beam_to_solid_volume_meshtying_pair_base.cpp
    beam_to_solid_volume_meshtying_pair_gauss_point.cpp
    beam_to_solid_volume_meshtying_pair_mortar.cpp
    beam_to_solid_volume_meshtying_pair_mortar_rotation.cpp
    beam_to_solid_volume_meshtying_params.cpp
    beam_to_solid_volume_meshtying_vtk_output_params.cpp
    beam_to_solid_volume_meshtying_vtk_output_writer.cpp
    beam_to_solid_vtu_output_writer_base.cpp
    beam_to_solid_vtu_output_writer_utils.cpp
    beam_to_solid_vtu_output_writer_visualization.cpp
    beam_to_sphere_contact_pair.cpp
    beam_to_sphere_contact_params.cpp
    beam_to_sphere_potential_pair.cpp
    beaminteraction_calc_utils.cpp
    beaminteraction_conditions.cpp
    beaminteraction_data.cpp
    beaminteraction_geometry_utils.cpp
    beaminteraction_submodel_evaluator_beamcontact.cpp
    beaminteraction_submodel_evaluator_beamcontact_assembly_manager.cpp
    beaminteraction_submodel_evaluator_beamcontact_assembly_manager_direct.cpp
    beaminteraction_submodel_evaluator_beamcontact_assembly_manager_indirect.cpp
    beaminteraction_submodel_evaluator_crosslinking.cpp
    beaminteraction_submodel_evaluator_factory.cpp
    beaminteraction_submodel_evaluator_generic.cpp
    beaminteraction_submodel_evaluator_potential.cpp
    beaminteraction_submodel_evaluator_spherebeamlinking.cpp
    crosslinker_node.cpp
    crosslinking_params.cpp
    periodic_boundingbox.cpp
    spherebeamlinking_params.cpp
    str_model_evaluator_beamdata.cpp
    str_model_evaluator_beaminteraction.cpp
    str_model_evaluator_beaminteraction_datastate.cpp
    utils_parallel_proctoproc.cpp
    )

baci_add_library(lib_beaminteraction ${OBJS_LIB_BEAMINTERACTION})

set(LIBS_LIB_BEAMINTERACTION
    # cmake-format: sortable
    ele_beam3
    ele_rigidsphere
    ele_so
    ele_t3
    geometry_pair
    inpar
    lib_beamcontact
    linalg
    timestepping
    )

target_link_libraries(lib_beaminteraction PUBLIC ${LIBS_LIB_BEAMINTERACTION})
